tests/NormalTests/paczka1/fuzzy1/64811023.err
Error in line 9: uO0SAfbt3S S92 52,9
Error in line 21: klcZGWA2O S92 971,9
Error in line 26: FApSzWekhp A912 13,7
Error in line 29: FApSzWekhp S281 55,8
Error in line 19: g38aK S281 163,5
